--- a/kdeaccessibility/trunk/PKGBUILD
+++ b/kdeaccessibility/trunk/PKGBUILD
@@ -6,10 +6,11 @@ pkgbase=kdeaccessibility
 pkgname=('kdeaccessibility-colorschemes'
          'kdeaccessibility-iconthemes'
          'kdeaccessibility-jovie'
+         'kdeaccessibility-kaccessible'
          'kdeaccessibility-kmag'
          'kdeaccessibility-kmousetool'
          'kdeaccessibility-kmouth')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://accessibility.kde.org'
@@ -18,7 +19,7 @@ groups=('kde' 'kdeaccessibility')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime'
         'speech-dispatcher' 'docbook-xsl')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('ea3287999792557a5a4acca4e06c23e56b01eea3')
+sha1sums=('d15e366b3ba9d6cd9be38bb7b5e8d1edae858a9d')
 
 build() {
 	cd ${srcdir}
@@ -53,6 +54,14 @@ package_kdeaccessibility-jovie() {
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/jovie
 	make DESTDIR=$pkgdir install
+}
+
+package_kdeaccessibility-kaccessible() {
+    pkgdesc='Provides accessibility services like focus tracking and a screenreader'
+    depends=('kdebase-runtime' 'speech-dispatcher')
+	install='kdeaccessibility.install'
+    cd $srcdir/build/kaccessible
+    make DESTDIR=$pkgdir install
 }
 
 package_kdeaccessibility-kmag() {
