--- a/kdeartwork/trunk/PKGBUILD
+++ b/kdeartwork/trunk/PKGBUILD
@@ -13,16 +13,16 @@ pkgname=('kdeartwork-aurorae'
          'kdeartwork-styles'
          'kdeartwork-wallpapers'
          'kdeartwork-weatherwallpapers')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdeartwork')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'xscreensaver' 'eigen' 'kdebase-workspace'
-	'docbook-xsl')
+	'docbook-xsl' 'kdegraphics-libs')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('f584a11f188734380ee56950176f698426c29017')
+sha1sums=('9af6e510b851841981e8e822b6bf4d60b751d1c6')
 
 build() {
 	cd $srcdir
@@ -82,6 +82,8 @@ package_kdeartwork-styles() {
 	pkgdesc='KDE styles'
 	depends=('kdebase-workspace')
 	cd $srcdir/build/styles
+	make DESTDIR=$pkgdir install
+	cd $srcdir/build/kwin-styles
 	make DESTDIR=$pkgdir install
 }
 
