--- a/kdegames/trunk/PKGBUILD
+++ b/kdegames/trunk/PKGBUILD
@@ -22,6 +22,7 @@ pkgname=('kdegames-bomber'
          'kdegames-kiriki'
          'kdegames-kjumpingcube'
          'kdegames-klines'
+         'kdegames-klickety'
          'kdegames-kmahjongg'
          'kdegames-kmines'
          'kdegames-knetwalk'
@@ -30,7 +31,6 @@ pkgname=('kdegames-bomber'
          'kdegames-konquest'
          'kdegames-kpatience'
          'kdegames-kreversi'
-         'kdegames-ksame'
          'kdegames-kshisen'
          'kdegames-ksirk'
          'kdegames-kspaceduel'
@@ -43,7 +43,7 @@ pkgname=('kdegames-bomber'
          'kdegames-libkmahjongg'
          'kdegames-lskat'
          'kdegames-palapeli')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -52,7 +52,7 @@ groups=('kde' 'kdegames')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime' 'ggz-client-libs'
 	'twisted' 'kdebindings-python' 'docbook-xsl')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('622e817c3296dec58e122a0f18053fd743125c0b')
+sha1sums=('19450f38c66674944966f221660a5aeda80a1eb1')
 
 build() {
 	cd $srcdir
@@ -61,7 +61,8 @@ build() {
 	cmake ../${pkgbase}-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_SKIP_RPATH=ON \
-		-DCMAKE_INSTALL_PREFIX=/usr
+		-DCMAKE_INSTALL_PREFIX=/usr \
+        -DWITH_OpenAL=OFF
 	make
 }
 
@@ -267,6 +268,19 @@ package_kdegames-kjumpingcube() {
 	make DESTDIR=$pkgdir install
 }
 
+package_kdegames-klickety() {
+	pkgdesc='Board Game'
+	depends=('kdebase-runtime' 'kdegames-libkdegames')
+	replaces=('kdegames-ksame')
+	conflicts=('kdegames-ksame')
+	url="http://kde.org/applications/games/ksame/"
+	install='kdegames.install'
+	cd $srcdir/build/klickety
+	make DESTDIR=$pkgdir install
+	cd $srcdir/build/doc/klickety
+	make DESTDIR=$pkgdir install
+}
+
 package_kdegames-klines() {
 	pkgdesc='Tactical Game'
 	depends=('kdebase-runtime' 'kdegames-libkdegames')
@@ -367,17 +381,6 @@ package_kdegames-kreversi() {
 	make DESTDIR=$pkgdir install
 	install -D -m644 $srcdir/${pkgbase}-${pkgver}/kreversi/module.dsc \
 		$pkgdir/usr/share/ggz/kreversi.dsc
-}
-
-package_kdegames-ksame() {
-	pkgdesc='Board Game'
-	depends=('kdebase-runtime' 'kdegames-libkdegames')
-	url="http://kde.org/applications/games/ksame/"
-	install='kdegames.install'
-	cd $srcdir/build/ksame
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/ksame
-	make DESTDIR=$pkgdir install
 }
 
 package_kdegames-kshisen() {
