--- a/kdemultimedia/trunk/PKGBUILD
+++ b/kdemultimedia/trunk/PKGBUILD
@@ -10,17 +10,17 @@ pkgname=('kdemultimedia-dragonplayer'
          'kdemultimedia-kmix'
          'kdemultimedia-kscd'
          'kdemultimedia-mplayerthumbs')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdemultimedia')
-makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime' 'tunepimp' 'ffmpeg'
-        'mplayer' 'docbook-xsl' 'pulseaudio')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime' 'tunepimp'
+        'ffmpeg' 'mplayer' 'docbook-xsl' 'pulseaudio' 'libmusicbrainz3')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2"
         'mplayerthumbs.config')
-sha1sums=('fe3f30a5491d3384298c4f68ebed136bc83ba8a6'
+sha1sums=('704b5bc12c5d3c64809824b433dabeb101008825'
           'ba016fa2563c14ffcba852c62506b66bfc6ee683')
 
 build() {
@@ -67,7 +67,7 @@ package_kdemultimedia-juk() {
 
 package_kdemultimedia-kioslave() {
 	pkgdesc='Audio CD Browser'
-	depends=('kdelibs' 'musicbrainz' 'cdparanoia')
+	depends=('kdelibs' 'libmusicbrainz3' 'cdparanoia')
 	conflicts=('kdemultimedia-libkcddb' 'kdemultimedia-libkcompactdisc')
 	replaces=('kdemultimedia-libkcddb' 'kdemultimedia-libkcompactdisc')
 	for i in kioslave doc/kioslave libkcddb libkcompactdisc; do
@@ -79,7 +79,6 @@ package_kdemultimedia-kioslave() {
 package_kdemultimedia-kmix() {
 	pkgdesc='Sound Mixer'
 	depends=('kdebase-runtime')
-    optdepends=('pulseaudio: PulseAudio support')
 	url="http://kde.org/applications/multimedia/kmix"
 	install='kdemultimedia.install'
 	cd $srcdir/build/kmix
@@ -90,7 +89,7 @@ package_kdemultimedia-kmix() {
 
 package_kdemultimedia-kscd() {
 	pkgdesc='CD Player'
-	depends=('kdebase-runtime' 'musicbrainz')
+	depends=('kdebase-runtime' 'libmusicbrainz3')
 	url="http://kde.org/applications/multimedia/kscd"
 	install='kdemultimedia.install'
 	cd $srcdir/build/kscd
