--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -52,6 +52,7 @@ pkgname=('kdeplasma-addons-applets-bball'
          'kdeplasma-addons-applets-weather'
          'kdeplasma-addons-applets-weatherstation'
          'kdeplasma-addons-applets-webslice'
+         'kdeplasma-addons-containments'
          'kdeplasma-addons-libs'
          'kdeplasma-addons-runners-audioplayercontrol'
          'kdeplasma-addons-runners-browserhistory'
@@ -59,6 +60,7 @@ pkgname=('kdeplasma-addons-applets-bball'
          'kdeplasma-addons-runners-contacts'
          'kdeplasma-addons-runners-converter'
          'kdeplasma-addons-runners-datetime'
+         'kdeplasma-addons-runners-events'
          'kdeplasma-addons-runners-katesessions'
          'kdeplasma-addons-runners-konquerorsessions'
          'kdeplasma-addons-runners-konsolesessions'
@@ -70,16 +72,16 @@ pkgname=('kdeplasma-addons-applets-bball'
          'kdeplasma-addons-wallpapers-pattern'
          'kdeplasma-addons-wallpapers-virus'
          'kdeplasma-addons-wallpapers-weather')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL')
 groups=('kde' 'kdeplasma-addons')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-workspace' 'kdegraphics-libs'
-	'kdeedu-marble' 'eigen' 'scim' 'qwt' 'docbook-xsl')
+	'kdeedu-marble' 'eigen' 'scim' 'qwt' 'docbook-xsl' 'boost')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('12eac8b330b9abf7b3739ed6490aee52a5f4c35e')
+sha1sums=('d266ca34c293743a64362b063ab58f671e7c1777')
 
 build() {
         cd ${srcdir}
@@ -169,6 +171,7 @@ package_kdeplasma-addons-applets-dict() {
 package_kdeplasma-addons-applets-eyes() {
 	pkgdesc='XEyes clone'
 	depends=('kdebase-workspace')
+	install='kdeplasma-addons-applets.install'
 	cd $srcdir/build/applets/eyes
 	make DESTDIR=$pkgdir install
 }
@@ -275,6 +278,7 @@ package_kdeplasma-addons-applets-leavenote() {
 package_kdeplasma-addons-applets-life() {
 	pkgdesc='Life'
 	depends=('kdebase-workspace')
+	install='kdeplasma-addons-applets.install'
 	cd $srcdir/build/applets/life
 	make DESTDIR=$pkgdir install
 }
@@ -282,6 +286,7 @@ package_kdeplasma-addons-applets-life() {
 package_kdeplasma-addons-applets-luna() {
 	pkgdesc='Display moon phases for your location'
 	depends=('kdebase-workspace')
+	install='kdeplasma-addons-applets.install'
 	cd $srcdir/build/applets/luna
 	make DESTDIR=$pkgdir install
 }
@@ -451,6 +456,13 @@ package_kdeplasma-addons-applets-webslice() {
 	make DESTDIR=$pkgdir install
 }
 
+package_kdeplasma-addons-containments() {
+	pkgdesc='Activities types for Plasma shells'
+	depends=('kdebase-workspace')
+	cd $srcdir/build/containments
+	make DESTDIR=$pkgdir install
+}
+
 package_kdeplasma-addons-libs() {
 	pkgdesc='Plasma Addon Library'
 	depends=('kdebase-workspace')
@@ -503,6 +515,13 @@ package_kdeplasma-addons-runners-datetime() {
 	pkgdesc='The current date and time, locally or in any timezone'
 	depends=('kdebase-workspace')
 	cd $srcdir/build/runners/datetime
+	make DESTDIR=$pkgdir install
+}
+
+package_kdeplasma-addons-runners-events() {
+	pkgdesc='Calendar Events runner'
+	depends=('kdebase-workspace')
+	cd $srcdir/build/runners/events
 	make DESTDIR=$pkgdir install
 }
 
