--- a/kdeutils/trunk/PKGBUILD
+++ b/kdeutils/trunk/PKGBUILD
@@ -4,6 +4,7 @@
 
 pkgbase=kdeutils
 pkgname=('kdeutils-ark'
+         'kdeutils-filelight'
          'kdeutils-kcalc'
          'kdeutils-kcharselect'
          'kdeutils-kdf'
@@ -12,11 +13,10 @@ pkgname=('kdeutils-ark'
          'kdeutils-kremotecontrol'
          'kdeutils-ktimer'
          'kdeutils-kwallet'
-         'kdeutils-okteta'
          'kdeutils-printer-applet'
          'kdeutils-superkaramba'
          'kdeutils-sweeper')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -26,7 +26,7 @@ makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-lib' 'kdebase-workspace'
 	'kdebindings-python' 'system-config-printer-common' 'libarchive' 'qimageblitz'
 	'docbook-xsl' 'qjson')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('f3bf2bd808e4540f6666cb9b26471a90f2c0135e')
+sha1sums=('d63e7abd1e91d4d33b7d03525c90abb3e8a56383')
 
 build() {
 	cd ${srcdir}
@@ -47,6 +47,19 @@ package_kdeutils-ark() {
 	cd $srcdir/build/ark
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/ark
+	make DESTDIR=$pkgdir install
+}
+
+package_kdeutils-filelight() {
+	pkgdesc='View disk usage information'
+	depends=('kdebase-runtime' 'qimageblitz')
+	replaces=('filelight')
+	conflicts=('filelight')
+	install='kdeutils.install'
+	url="http://methylblue.com/filelight/"
+	cd $srcdir/build/filelight
+	make DESTDIR=$pkgdir install
+	cd $srcdir/build/doc/filelight
 	make DESTDIR=$pkgdir install
 }
 
@@ -135,17 +148,6 @@ package_kdeutils-kwallet() {
 	cd $srcdir/build/kwallet
 	make DESTDIR=$pkgdir install
 	cd $srcdir/build/doc/kwallet
-	make DESTDIR=$pkgdir install
-}
-
-package_kdeutils-okteta() {
-	pkgdesc='Hex Editor'
-	depends=('kdebase-runtime')
-	url="http://kde.org/applications/utilities/okteta"
-	install='kdeutils-okteta.install'
-	cd $srcdir/build/okteta
-	make DESTDIR=$pkgdir install
-	cd $srcdir/build/doc/okteta
 	make DESTDIR=$pkgdir install
 }
 
