--- a/kdewebdev/trunk/PKGBUILD
+++ b/kdewebdev/trunk/PKGBUILD
@@ -6,16 +6,16 @@ pkgname=('kdewebdev-kfilereplace'
          'kdewebdev-kimagemapeditor'
          'kdewebdev-klinkstatus'
          'kdewebdev-kommander')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde' 'kdewebdev')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'ruby' 'tidyhtml' 'kdepim-runtime'
-        'docbook-xsl')
+	'docbook-xsl' 'boost')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgbase}-${pkgver}.tar.bz2")
-sha1sums=('2493e6151c498f4b2ff84363ea51a41eb0d759d9')
+sha1sums=('cfcba6738e34d0860d9d8bc0dcd2fa8fdb0b1707')
 
 build() {
 	cd $srcdir
