--- a/kernel26/trunk/PKGBUILD
+++ b/kernel26/trunk/PKGBUILD
@@ -7,10 +7,10 @@ pkgname=('kernel26' 'kernel26-headers' 'kernel26-docs') # Build stock -ARCH kern
 _kernelname=${pkgname#kernel26}
 _basekernel=2.6.37
 pkgver=${_basekernel}
-pkgrel=2
+pkgrel=3
 makedepends=('xmlto' 'docbook-xsl')
-_patchname="patch-${pkgver}-${pkgrel}-ARCH"
-#_patchname="patch-${pkgver}-1-ARCH"
+#_patchname="patch-${pkgver}-${pkgrel}-ARCH"
+_patchname="patch-${pkgver}-2-ARCH"
 arch=(i686 x86_64)
 license=('GPL2')
 url="http://www.kernel.org"
@@ -65,7 +65,7 @@ package_kernel26() {
   pkgdesc="The Linux Kernel and modules"
   groups=('base')
   backup=(etc/mkinitcpio.d/${pkgname}.preset)
-  depends=('coreutils' 'linux-firmware' 'module-init-tools' 'mkinitcpio>=0.5.20')
+  depends=('coreutils' 'linux-firmware' 'module-init-tools' 'mkinitcpio>=0.6.8')
   # pwc, ieee80211 and hostap-driver26 modules are included in kernel26 now
   # nforce package support was abandoned by nvidia, kernel modules should cover everything now.
   # kernel24 support is dropped since glibc24
@@ -106,6 +106,8 @@ package_kernel26() {
   rm -f ${pkgdir}/lib/modules/${_kernver}/{source,build}
   # remove the firmware
   rm -rf ${pkgdir}/lib/firmware
+  # gzip -9 all modules to safe 100MB of space
+  find "$pkgdir" -name '*.ko' -exec gzip -9 {} \;
 }
 
 package_kernel26-headers() {
