--- a/btrfs-progs-unstable/trunk/PKGBUILD
+++ b/btrfs-progs-unstable/trunk/PKGBUILD
@@ -1,26 +1,25 @@
 # $Id$
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 pkgname=btrfs-progs-unstable
-pkgver=0.19.20100607
-pkgrel=3
+pkgver=0.19.20101006
+pkgrel=1
 pkgdesc="btrfs filesystem utilities"
 arch=(i686 x86_64)
 depends=('glibc' 'e2fsprogs')
-source=(ftp://ftp.archlinux.org/other/$pkgname/$pkgname-$pkgver.tar.bz2
-         btrfs-progs-build-fixes.patch)
+source=(ftp://ftp.archlinux.org/other/$pkgname/$pkgname-$pkgver.tar.bz2)
 url="http://btrfs.wiki.kernel.org/"
 license=('GPL2')
 
 build() {
    cd $srcdir/$pkgname
-   # fix for building with new glibc, taken from fedora
-   patch -Np1 -i ../btrfs-progs-build-fixes.patch
-   make all
-   make convert
+   make CFLAGS="$CFLAGS" all convert
+}
+
+package() {
+   cd $srcdir/$pkgname
    make prefix=$pkgdir/usr bindir=$pkgdir/sbin install
    # fix manpage
    mkdir -p $pkgdir/usr/share/
    mv $pkgdir/usr/man $pkgdir/usr/share/man
 }
-md5sums=('94b9bff5a66420c658f422c97dc12f69'
-         '7a3477bb2496ace2b1ea1f7ad48f9b7c')
+md5sums=('6bce610ed1720e6b9dc9fa96cbd8b73e')
