--- a/pciutils/trunk/PKGBUILD
+++ b/pciutils/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 pkgname=pciutils
 pkgver=3.1.7
-pkgrel=2
+pkgrel=3
 pkgdesc="PCI bus configuration space access library and tools"
 arch=(i686 x86_64)
 license=('GPL2')
@@ -16,11 +16,8 @@ md5sums=('35222edb86b50a6641352c66fe829b2e')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  CFLAGS="${CFLAGS} -fPIC -DPIC"
-  sed -i -e 's/^OPT=.*/OPT=-O2 -pipe -fPIC -DPIC/g' Makefile
   ./update-pciids.sh
-
-  make ZLIB=no PREFIX=/usr SHAREDIR=/usr/share/hwdata MANDIR=/usr/share/man all
+  make OPT="$CFLAGS -fPIC -DPIC" ZLIB=no PREFIX=/usr SHAREDIR=/usr/share/hwdata MANDIR=/usr/share/man all
 }
 
 package() {
