--- a/polkit-kde/trunk/PKGBUILD
+++ b/polkit-kde/trunk/PKGBUILD
@@ -1,36 +1,26 @@
-# $Id $
+# $Id: PKGBUILD 102634 2010-12-09 08:51:18Z andrea $
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=polkit-kde
-pkgver=0.95.1
-pkgrel=2
-pkgdesc='KDE PolicyKit Authentication Agent'
+pkgver=0.99.0
+pkgrel=1
+pkgdesc='Daemon providing a polkit authentication UI for KDE'
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL')
 depends=('kdelibs')
 makedepends=('cmake' 'automoc4')
-source=("ftp://ftp.kde.org/pub/kde/stable/apps/KDE4.x/admin/${pkgname}-1-${pkgver}.tar.bz2"
-        'xdg-path.patch'
-	'gcc4.5.patch')
-md5sums=('68e40d2a43335cb5876a1c8bc51c461b'
-         '84d4873e60c1b628bcbaaf38c7ab2f44'
-         '06caf1645510367eb253509240d3c8bd')
+source=("ftp://ftp.kde.org/pub/kde/stable/apps/KDE4.x/admin/${pkgname}-agent-1-${pkgver}.tar.bz2")
+md5sums=('a02d3fddc6270a88bceaf3ba604c92f8')
 
 build() {
-	cd ${srcdir}/${pkgname}-1-${pkgver}
-	patch -p0 -i ${srcdir}/xdg-path.patch
-	patch -Np4 -i ${srcdir}/gcc4.5.patch
-
 	cd ${srcdir}
 	mkdir build
 	cd build
-	export XDG_CONFIG_DIRS=/etc/xdg
-	cmake ../${pkgname}-1-${pkgver} \
+	cmake ../${pkgname}-agent-1-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
-		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_SKIP_RPATH=ON
+		-DCMAKE_INSTALL_PREFIX=/usr
 	make
 }
 
