--- a/akonadi/trunk/PKGBUILD
+++ b/akonadi/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=akonadi
-pkgver=1.4.1
-pkgrel=2
+pkgver=1.5.0
+pkgrel=1
 pkgdesc="PIM layer, which provides an asynchronous API to access all kind of PIM data"
 arch=('i686' 'x86_64')
 url='http://pim.kde.org/akonadi'
 license=('LGPL')
 depends=('shared-mime-info' 'boost-libs' 'mysql' 'soprano')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost')
-install=${pkgname}.install
+install="${pkgname}.install"
 source=("http://download.akonadi-project.org/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('c0852fd5f45aa602b09824cf51e24fbd')
+md5sums=('8b0d43b0e947b876a461d90f4b877f54')
 
 build() {
   cd ${srcdir}
