--- a/mkinitcpio-busybox/trunk/PKGBUILD
+++ b/mkinitcpio-busybox/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # $Id$
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 pkgname=mkinitcpio-busybox
-pkgver=1.17.2
+pkgver=1.18.2
 pkgrel=1
 pkgdesc="base initramfs tools"
 arch=('i686' 'x86_64')
@@ -10,8 +10,8 @@ license=('GPL')
 depends=('glibc')
 source=(http://busybox.net/downloads/busybox-${pkgver}.tar.bz2
         config)
-sha256sums=('7a4c9d59098734c86c3bfef421719c3239ca213bba071e284e2352ff4a01cac6'
-            'd2131815c28b987b0f7bf9065e7cf567c656438fbe0d44b685dc7dba387a1ca9')
+sha256sums=('aa7e1cec8cd9c7f4e56098b9e4bb2ab5d593d5a35f766ad9e6a312289bf57080'
+            'dd6dca08fbc335f1394e0f1b619df6895349c759d0c6e43456aed411e16d4194')
 
 build() {
   cd "${srcdir}/busybox-${pkgver}"
@@ -22,7 +22,7 @@ build() {
   else
     sed 's|^CONFIG_EXTRA_CFLAGS=.*|CONFIG_EXTRA_CFLAGS="-march=i686 -mtune=generic -Os -pipe -fno-strict-aliasing"|' "${srcdir}/config" > .config
   fi
-  make || return 1
+  make
 }
 
 package() {
