--- a/kde-l10n/trunk/PKGBUILD
+++ b/kde-l10n/trunk/PKGBUILD
@@ -12,13 +12,11 @@ pkgname=('kde-l10n-ar'
          'kde-l10n-de'
          'kde-l10n-el'
          'kde-l10n-en_gb'
-         'kde-l10n-eo'
          'kde-l10n-es'
          'kde-l10n-et'
          'kde-l10n-eu'
          'kde-l10n-fi'
          'kde-l10n-fr'
-         'kde-l10n-fy'
          'kde-l10n-ga'
          'kde-l10n-gl'
          'kde-l10n-gu'
@@ -37,7 +35,7 @@ pkgname=('kde-l10n-ar'
          'kde-l10n-ko'
          'kde-l10n-lt'
          'kde-l10n-lv'
-         'kde-l10n-ml'
+         'kde-l10n-mai'
          'kde-l10n-nb'
          'kde-l10n-nds'
          'kde-l10n-nl'
@@ -58,7 +56,7 @@ pkgname=('kde-l10n-ar'
          'kde-l10n-wa'
          'kde-l10n-zh_cn'
          'kde-l10n-zh_tw')
-pkgver=4.5.5
+pkgver=4.6.0
 pkgrel=1
 arch=('any')
 url='http://www.kde.org'
@@ -75,13 +73,11 @@ source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-ar-${p
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-de-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-el-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-en_GB-${pkgver}.tar.bz2"
-        "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-eo-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-es-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-et-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-eu-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-fi-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-fr-${pkgver}.tar.bz2"
-        "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-fy-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-ga-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-gl-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-gu-${pkgver}.tar.bz2"
@@ -100,7 +96,7 @@ source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-ar-${p
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-ko-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-lt-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-lv-${pkgver}.tar.bz2"
-        "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-ml-${pkgver}.tar.bz2"
+        "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-mai-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-nb-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-nds-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-nl-${pkgver}.tar.bz2"
@@ -122,62 +118,60 @@ source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-ar-${p
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-zh_CN-${pkgver}.tar.bz2"
         "http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgbase}-zh_TW-${pkgver}.tar.bz2"
         "ftp://ftp.archlinux.org/other/kde/kdepim-4.4.5-l10n.tar.bz2")
-sha1sums=('ab27f4a5a887871025673563e20e4b2a94b23811'
-         '849a21527775aced0a5c242c4fdcf6b63505a1fe'
-         'e4afeabd93485fed19bf03a27951630773da02c3'
-         'acefb5471cee7c28f06776129818e6c5b4cc065c'
-         'ce265e81c4e85385b4cb9decda7dd5e61e759f01'
-         '5fefa9af2d3799fdce991057f0dd285538cb8135'
-         '10d8dbc8d95d977f5b01b13aca41eaf46a05a861'
-         'ea63181e8826a47e826af7d000c615d6da5ea21c'
-         'f95acabb26250acd1ca6d77120680f682a348b60'
-         '18f8d3ac451217cc07c276bbf978e2f3a2d02af2'
-         '438e1d2781e6f23a73c7185d76ae19af7c07648b'
-         '05ec85367f76ed12bf6c9b593dd7942a3f071e32'
-         'a3dd0aec7b05c8005d83b55500c826309b52110b'
-         'f11739cf4f4ab50c79ce74dd84d3b1e9f896504c'
-         'a5c3c4e8da994dc80727ecf3b7836b9e95fddd12'
-         '467896bb632f8cfad4ac2009331611e4b422d309'
-         '813fffc49c2434481f8d347e3619d57a7a1fc428'
-         '99311e69b3010cf70ad156cb999875b201d590c7'
-         '2f216427443f6e4c5d5a8e0a4bb835bdf1acd3f1'
-         '87d0e4d85e42c2ee11c099408ec1b41cb59f2078'
-         'a5b1eb793656fbaca353a99bcd334a1c8175a733'
-         'bc84b9efef48cc5e50f275e31a01bb2a7c7f17e1'
-         'e7a9ee0d2fa8a0e0cd89966e4f08ecc68c64fab1'
-         'd5318fe34189b6cd75b49c0744a817963cdafed3'
-         '2d0e33e8a223e7539506b1725ffc7665aeb81727'
-         '97491308e42c5c840c28337595546ee02696d99a'
-         'afba343c8ffd4ea7da0c199703d04d3f124f40a6'
-         '962fc8ff3adace4a904a0959eb0921167fd92932'
-         '6bc9f52729f8d151a80af2de804a56b945c1376a'
-         'dd34ada27a281f16304bbd376afcd3eb397d7112'
-         '74f42dbc53c10c80ce495ffcb1709ceaa36849aa'
-         '07d431b24ae43dfed77113816ab3a78ee036ca85'
-         'dcfd9b84524f90a9ee4947e58ad2ac6647daa84b'
-         '01329e71ceeee1107f5dd1f7e8b347fd4baee40a'
-         '001b6766dde3a29eefc7269ebf619b2ecd02938f'
-         '09ca2c1076c327c0e40b5b7317d627bb0989085b'
-         '2af12ffd8565071deb7beb3af0c8cc9e788fc356'
-         'df9eff6a33916d2f13b1e6e670f1a34a74a90b17'
-         '82f4562b2f56a6c40e539add9a2ab0a9c96f45f4'
-         '2f1a229194840be74edf2ed3642636cbe89747ce'
-         '64bafbc0627cd9c6306eabf6be200562c0684cdf'
-         '9df9e138a54a61d01dd42c99dae2fca33d472ad6'
-         'eb9abc95b71b1124742222681a9fba08f3c6bff2'
-         '241136a1fc05c42c065b43e4cadebdb0650d21a0'
-         '0ef6b0086f3d606fedb610e3db5e5ec47b530a70'
-         '17516154d12c9de115d70ce9aed74b8dab7e7be2'
-         'c0f28bde896a4bb4e0413f7eba1682da6a613142'
-         '57777055701f6d166e15a9b15669d27a04683cca'
-         '28bef08c61a7149459494fe02ec8bf17d9d84adc'
-         '47f00115203325765565513f6a463325d52697a9'
-         '8ecf014eff1ae2752d1cad33e21d80bf5dfdbd00'
-         '7f5cce58fb4007f247f2cfb55e7a9a4b97ccd285'
-         '39cf140e897d2f4ea14647854c24ca987314cf40'
-         'e705002afeda8ff574262c148e0796ac756fd2b0'
-         'b8b5e86030af7907abd8de4331a41869bbe5fbe6'
-         '755461b2747f58f2b10142f95c5da5a1e5a6ec90')
+sha1sums=('8b704c5977ffb9b016e828478c815c6fcbe4efe7'
+         '3ad95ebf03235ecc37328cd4d134f04387cfa447'
+         '10b2e4c6fbee52cbbff00294b5c4806b9860b5a3'
+         '2fb6c110e1293fc3569e861af157df5509c337ed'
+         'c8d4d5ecd7ffdb41242ead3339a32d527f4d9832'
+         'ad10cb26a660666308f1e348f62aa12999d35dc5'
+         '498bb867599e5ca10dea306c0a93287fbd0f2025'
+         '410e6f7af5a25a09871ba096557f07c2de7b6b03'
+         '0f4f0c0978e065d7d05f451419e07691af4354db'
+         '23b07cffcb654b10960f74e26a69a9a69c78d48d'
+         'f5fcf455e8c8c5fc010ba7d0944f8ab635224d61'
+         'c932c2e078564fcf5718489c568f8e005cb16518'
+         'cb5e38cafb42fcbe55422a4d4c740003edddbe79'
+         'f93d7de23ab58cea09dae78530fe4bb8481f5427'
+         '821f6432818d6c0da9c322744d8a8ff7157a7362'
+         '8257b52a7dd5dfd52718b3326e897a1cf8ea7318'
+         '4b495457b26b4ff504554991110fecb49fa13795'
+         '1d37c5a06166a6b0ef04ebc7d52f7d584a6c3687'
+         '3aef8f7764c9b2e93a4f9cc921c656a068a076a9'
+         '937ae268cda8ae3a1b092c84152f2341ef79f012'
+         '97a94a0c241f54fa08a8bef5cab04dff26b42ada'
+         'ffe51b006c137283a4c31f2281985d8b342b0ec5'
+         '08674518f6a077cfc4e3d51fa32ae9aa49cd73ea'
+         '62caf6c3ed270ab469050463bfef5ccdbab1431a'
+         'f2d44f9f27a5118108cbdac268d04f3de19b842b'
+         '7d34906e6a6abc3734b5422daac0d773592df8a7'
+         'e82da543f5e4cfcdf4515b5e3e25ad877cf0b4e2'
+         'c5e57ef8aef794beccf586fba2efdc497510f08d'
+         '95ddde5d2b35aa7788ca67f7ad658ce00d5fdfe6'
+         '044240342dcf6aeae8e5044881c11ba49681c219'
+         'ae2ec641a5c0a880b20d6de6be209620e6f6b61f'
+         '344bf9a4ad1f62655d33f867a976071d0c848f41'
+         'e95c44c5db0cc413122438f2aff97c882b3aa7cb'
+         'e3b7a01c7ba5b9d98a88678488995a0608dbe651'
+         '47ba39c0c1369f304ccd31a9904515afa917e343'
+         '9e36679dd7c9e16cae89a2fa3811a13f84a9ee57'
+         '59ee1e7d2adb415ecdcdf7465558374a8820c717'
+         '982ea74ac586e3fe4e63f66fcdae2b4b0f68006e'
+         'f510204dfa756b7a3401e0a6e305260fad60d8eb'
+         '35621aed033408724d8890664ffad916df24e824'
+         '15baf4df8470e8af67699d37a859e8b5000e30f2'
+         'c1eca24a0e09e11645546c9b60cd36441554bce6'
+         'dcb3735cd6cc290005835706a4959338387a4211'
+         '1e8ca30528aa6aacb189efb904e7fc2b427c6ef6'
+         '3916396a9a494e1ab7c1671d1ddcb438334865d7'
+         '22fddcbaf4e1fd6b49c2f2abdb05d36a735b690a'
+         'f255f2233ef9a9c55254455716800f8fc93dce87'
+         'f3808cc6864327c7e1b862eaa1a23d7a6a110520'
+         '5cab5d73d8a0e03b21723dbb49aa565f43d6efef'
+         '7a6f714202dad893b8d5aa3cff0ef806d684b00f'
+         '5a1f580e6722a0ac8304057e6146575e1096ceb5'
+         'cb188c64ccce76ab30e632627079416dd144106f'
+         '0f4438457bd72ecc06f1999fa7fc049d8277ccb2'
+         'f0e64377f60744a91d288a4f685e27db8d01993f')
 
 build() {
 	cd ${srcdir}
@@ -271,16 +265,6 @@ build() {
 	make
 	cd ../..
 
-	mkdir -p build/eo
-	cd build/eo
-	[ -d ${srcdir}/kde-l10n-eo-${pkgver}/docs/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-eo-${pkgver}/docs/CMakeLists.txt
-	[ -d ${srcdir}/kde-l10n-eo-${pkgver}/messages/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-eo-${pkgver}/messages/CMakeLists.txt
-	cmake ${srcdir}/kde-l10n-eo-${pkgver} \
-		-DCMAKE_BUILD_TYPE=Release \
-		-DCMAKE_INSTALL_PREFIX=/usr
-	make
-	cd ../..
-
 	mkdir -p build/es
 	cd build/es
 	[ -d ${srcdir}/kde-l10n-es-${pkgver}/docs/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-es-${pkgver}/docs/CMakeLists.txt
@@ -326,16 +310,6 @@ build() {
 	[ -d ${srcdir}/kde-l10n-fr-${pkgver}/docs/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-fr-${pkgver}/docs/CMakeLists.txt
 	[ -d ${srcdir}/kde-l10n-fr-${pkgver}/messages/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-fr-${pkgver}/messages/CMakeLists.txt
 	cmake ${srcdir}/kde-l10n-fr-${pkgver} \
-		-DCMAKE_BUILD_TYPE=Release \
-		-DCMAKE_INSTALL_PREFIX=/usr
-	make
-	cd ../..
-
-	mkdir -p build/fy
-	cd build/fy
-	[ -d ${srcdir}/kde-l10n-fy-${pkgver}/docs/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-fy-${pkgver}/docs/CMakeLists.txt
-	[ -d ${srcdir}/kde-l10n-fy-${pkgver}/messages/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-fy-${pkgver}/messages/CMakeLists.txt
-	cmake ${srcdir}/kde-l10n-fy-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr
 	make
@@ -521,11 +495,11 @@ build() {
 	make
 	cd ../..
 
-	mkdir -p build/ml
-	cd build/ml
-	[ -d ${srcdir}/kde-l10n-ml-${pkgver}/docs/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-ml-${pkgver}/docs/CMakeLists.txt
-	[ -d ${srcdir}/kde-l10n-ml-${pkgver}/messages/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-ml-${pkgver}/messages/CMakeLists.txt
-	cmake ${srcdir}/kde-l10n-ml-${pkgver} \
+	mkdir -p build/mai
+	cd build/mai
+	[ -d ${srcdir}/kde-l10n-mai-${pkgver}/docs/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-mai-${pkgver}/docs/CMakeLists.txt
+	[ -d ${srcdir}/kde-l10n-mai-${pkgver}/messages/kdepim ] && sed -i '2i add_subdirectory( kdepim )' ${srcdir}/kde-l10n-mai-${pkgver}/messages/CMakeLists.txt
+	cmake ${srcdir}/kde-l10n-mai-${pkgver} \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr
 	make
@@ -805,14 +779,6 @@ package_kde-l10n-en_gb() {
 	make DESTDIR=$pkgdir install
 }
 
-package_kde-l10n-eo() {
-	pkgdesc=('Esperanto Localization for KDE')
-	replaces=('kde-i18n-eo')
-	provides=('kde-i18n-eo')
-	cd $srcdir/build/eo
-	make DESTDIR=$pkgdir install
-}
-
 package_kde-l10n-es() {
 	pkgdesc=('Spanish Localization for KDE')
 	replaces=('kde-i18n-es')
@@ -850,14 +816,6 @@ package_kde-l10n-fr() {
 	replaces=('kde-i18n-fr')
 	provides=('kde-i18n-fr')
 	cd $srcdir/build/fr
-	make DESTDIR=$pkgdir install
-}
-
-package_kde-l10n-fy() {
-	pkgdesc=('Frisian Localization for KDE')
-	replaces=('kde-i18n-fy')
-	provides=('kde-i18n-fy')
-	cd $srcdir/build/fy
 	make DESTDIR=$pkgdir install
 }
 
@@ -1005,11 +963,11 @@ package_kde-l10n-lv() {
 	make DESTDIR=$pkgdir install
 }
 
-package_kde-l10n-ml() {
-	pkgdesc=('Malayalam Localization for KDE')
-	replaces=('kde-i18n-ml')
-	provides=('kde-i18n-ml')
-	cd $srcdir/build/ml
+package_kde-l10n-mai() {
+	pkgdesc=('Maithili Localization for KDE')
+	replaces=('kde-i18n-mai')
+	provides=('kde-i18n-mai')
+	cd $srcdir/build/mai
 	make DESTDIR=$pkgdir install
 }
 
