upgpkg: freenx 0.7.3-7 fix #22333 #22051 bump to latest svn status
git-svn-id: file:///srv/repos/svn-packages/svn@107693 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/freenx/trunk/PKGBUILD
+++ b/freenx/trunk/PKGBUILD
@@ -3,32 +3,31 @@
 #Contributed: eliott <eliott@solarblue.net>, Andre Naumann <anaumann@SPARCed.org> 
 pkgname=freenx
 pkgver=0.7.3
-pkgrel=6
+pkgrel=7
 pkgdesc="Free Software (GPL) Implementation of the NX Server"
 arch=(i686 x86_64)
 url="http://freenx.berlios.de"
 license=('GPL')
-depends=('nxserver' 'gnu-netcat' 'openssh' 'expect' 'xorg-xauth' 'xorg-apps' 'xorg-fonts-misc' 'coreutils')
+depends=('nxserver' 'gnu-netcat' 'openssh' 'expect' 'xorg-xauth' 'xorg-apps' 'xorg-fonts-misc' 'coreutils' 'xdialog')
 backup=(opt/NX/etc/node.conf)
 install=freenx.install
 source=(http://download.berlios.de/freenx/$pkgname-server-$pkgver.tar.gz
-        kde-config.patch
         keymap.patch
-        nxagent-startup.patch)
+        nxagent-startup.patch
+        freenx-latest-svn.patch)
 
 
 build() {
   # patch and install nxserver
   cd $startdir/src/$pkgname-server-$pkgver
+  # add latest svn fixes
+  patch -Np3 -i ../freenx-latest-svn.patch
   # patch from inside nx
-  patch < gentoo-nomachine.diff || return 1
+  patch < gentoo-nomachine.diff 
   # patch broken keymap remapping
-  patch -Np0 -i ${srcdir}/keymap.patch || return 1
+  patch -Np0 -i ${srcdir}/keymap.patch 
   # patch nxagent startup to avoid login issues
-  patch -Np0 -i ${srcdir}/nxagent-startup.patch || return 1
-  # fixed for archlinux
-  ### Broken by kde4 at the moment!
-  #patch -Np0 -i ../kde-config.patch || return 1
+  patch -Np0 -i ${srcdir}/nxagent-startup.patch 
   sed -i -e 's,authorized_keys2,authorized_keys,g' nxloadconfig
   sed -i -e 's,/usr/NX,/opt/NX,g' nxloadconfig
   sed -i -e 's,netcat,nc,g' nxloadconfig
@@ -44,6 +43,10 @@ build() {
   sed -i -e 's,libXrender.so.1.2,libXrender.so.1.2.2:$APPLICATION_LIBRARY_PATH/libXcompsh.so.3:$APPLICATION_LIBRARY_PATH/libXcompshad.so.3,g' nxloadconfig
   # fix key generation
   sed -i -e 's,AUTOMATIC="no",AUTOMATIC="yes",g' nxsetup
+}
+
+package() {
+  cd $startdir/src/$pkgname-server-$pkgver  
   install -D -m755 nxnode $startdir/pkg/opt/NX/bin/nxnode
   install -D -m755 nxserver $startdir/pkg/opt/NX/bin/nxserver
   install -D -m755 nxsetup $startdir/pkg/opt/NX/bin/nxsetup
@@ -65,6 +68,6 @@ build() {
   mkdir -m700 -p $startdir/pkg/opt/NX/home/nx
 }
 md5sums=('856f597e139018f7ed62713c9d6c9ed5'
-         '70788a41f6c965ce117e9f5a8809df2a'
          'f0867659c925f6363fb2b7661f349248'
-         '30dc16d8e2093ff71d5834a169ad9d00')
+         '30dc16d8e2093ff71d5834a169ad9d00'
+         '788f30322783cf2c2dc833e2e4d5e8ad')
