upgpkg: kde-meta 4.6-1.2 KDE 4.6
git-svn-id: file:///srv/repos/svn-packages/svn@107742 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-meta/trunk/PKGBUILD
+++ b/kde-meta/trunk/PKGBUILD
@@ -18,8 +18,8 @@ pkgname=('kde-meta-kdeaccessibility'
          'kde-meta-kdetoys'
          'kde-meta-kdeutils'
          'kde-meta-kdewebdev')
-pkgver=4.5
-pkgrel=2
+pkgver=4.6
+pkgrel=1.2
 arch=('any')
 url='http://www.archlinux.org/'
 license=('GPL')
@@ -30,6 +30,7 @@ package_kde-meta-kdeaccessibility() {
 	depends=('kdeaccessibility-colorschemes'
 	         'kdeaccessibility-iconthemes'
 	         'kdeaccessibility-jovie'
+             'kdeaccessibility-kaccessible'
 	         'kdeaccessibility-kmag'
 	         'kdeaccessibility-kmousetool'
 	         'kdeaccessibility-kmouth')
@@ -69,6 +70,7 @@ package_kde-meta-kdebase() {
 	         'kdebase-kdepasswd'
 	         'kdebase-kdialog'
 	         'kdebase-kfind'
+             'kdebase-keditbookmarks'
 	         'kdebase-konqueror'
 	         'kdebase-konsole'
 	         'kdebase-kwrite'
@@ -124,6 +126,7 @@ package_kde-meta-kdegames() {
 	         'kdegames-kiriki'
 	         'kdegames-kjumpingcube'
 	         'kdegames-klines'
+	         'kdegames-klickety'
 	         'kdegames-kmahjongg'
 	         'kdegames-kmines'
 	         'kdegames-knetwalk'
@@ -132,7 +135,6 @@ package_kde-meta-kdegames() {
 	         'kdegames-konquest'
 	         'kdegames-kpatience'
 	         'kdegames-kreversi'
-	         'kdegames-ksame'
 	         'kdegames-kshisen'
 	         'kdegames-ksirk'
 	         'kdegames-kspaceduel'
@@ -260,12 +262,14 @@ package_kde-meta-kdeplasma-addons() {
 	         'kdeplasma-addons-applets-weather'
 	         'kdeplasma-addons-applets-weatherstation'
 	         'kdeplasma-addons-applets-webslice'
+	         'kdeplasma-addons-containments'
 	         'kdeplasma-addons-runners-audioplayercontrol'
 	         'kdeplasma-addons-runners-browserhistory'
 	         'kdeplasma-addons-runners-characters'
 	         'kdeplasma-addons-runners-contacts'
 	         'kdeplasma-addons-runners-converter'
 	         'kdeplasma-addons-runners-datetime'
+	         'kdeplasma-addons-runners-events'
 	         'kdeplasma-addons-runners-katesessions'
 	         'kdeplasma-addons-runners-konquerorsessions'
 	         'kdeplasma-addons-runners-konsolesessions'
@@ -287,7 +291,6 @@ package_kde-meta-kdesdk() {
 	         'kdesdk-dolphin-plugins'
 	         'kdesdk-kapptemplate'
 	         'kdesdk-kate'
-	         'kdesdk-kbugbuster'
 	         'kdesdk-kcachegrind'
 	         'kdesdk-kdeaccounts-plugin'
 	         'kdesdk-kdepalettes'
@@ -299,6 +302,7 @@ package_kde-meta-kdesdk() {
 	         'kdesdk-kstartperf'
 	         'kdesdk-kuiviewer'
 	         'kdesdk-lokalize'
+	         'kdesdk-okteta'
 	         'kdesdk-poxml'
 	         'kdesdk-scripts'
 	         'kdesdk-strigi-analyzer'
@@ -319,6 +323,7 @@ package_kde-meta-kdetoys() {
 package_kde-meta-kdeutils() {
 	pkgdesc=('Meta package for kdeutils')
 	depends=('kdeutils-ark'
+	         'kdeutils-filelight'
 	         'kdeutils-kcalc'
 	         'kdeutils-kcharselect'
 	         'kdeutils-kdf'
@@ -327,7 +332,6 @@ package_kde-meta-kdeutils() {
 	         'kdeutils-kremotecontrol'
 	         'kdeutils-ktimer'
 	         'kdeutils-kwallet'
-	         'kdeutils-okteta'
 	         'kdeutils-printer-applet'
 	         'kdeutils-superkaramba'
 	         'kdeutils-sweeper')
@@ -344,4 +348,3 @@ package_kde-meta-kdewebdev() {
 	replaces=('kdewebdev')
 	conflicts=('kdewebdev')
 }
-
