upgpkg: kdeplasma-applets-networkmanagement git20110105-1 new snapshot
git-svn-id: file:///srv/repos/svn-packages/svn@107745 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeplasma-applets-networkmanagement/trunk/PKGBUILD
+++ b/kdeplasma-applets-networkmanagement/trunk/PKGBUILD
@@ -1,9 +1,9 @@
-# $Id$
+# $Id: PKGBUILD 105813 2011-01-12 00:25:58Z andrea $
 # Maintainer: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Jakub Schmidtke <sjakub-at-gmail.com>
 
 pkgname=kdeplasma-applets-networkmanagement
-pkgver=svn1192135
+pkgver=git20110105
 pkgrel=1
 pkgdesc="KDE4 Network Management and plasmoid"
 arch=('i686' 'x86_64')
@@ -11,19 +11,20 @@ url="http://www.kde.org/"
 license=('GPL')
 depends=('kdebase-workspace' 'networkmanager')
 makedepends=('cmake' 'python2' 'automoc4')
+optdepends=('mobile-broadband-provider-info: allow to add new mobile connection')
 provides=('knetworkmanagement')
 conflicts=('networkmanager-plasmoid-svn' 'kdeplasma-applets-networkmanager')
 replaces=('networkmanager-plasmoid-svn' 'kdeplasma-applets-networkmanager')
 install=${pkgname}.install
-#svn co -q svn://websvn.kde.org:443/home/kde/trunk/extragear/base/networkmanagement
-source=("http://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('513c16a77a6aee562b014d8c0226baa9')
+#git clone git://git.kde.org/networkmanagement
+source=("ftp://ftp.archlinux.org/other/kde/networkmanagement-${pkgver}.tar.bz2")
+md5sums=('0dd7bd69d6d8535a4db82dd1dfc07eb5')
 
 build() {
   cd ${srcdir}
   mkdir build
   cd build
-  cmake ../networkmanagement \
+  cmake ../networkmanagement-${pkgver} \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_BUILD_TYPE=Release \
     -DDBUS_SYSTEM_POLICY_DIR=/etc/dbus-1/system.d
