--- a/feh/trunk/PKGBUILD
+++ b/feh/trunk/PKGBUILD
@@ -5,22 +5,19 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=feh
-pkgver=1.11
-pkgrel=3
+pkgver=1.11.1
+pkgrel=1
 pkgdesc='Fast, lightweight image viewer which uses imlib2'
 arch=('i686' 'x86_64')
 url='http://derf.homelinux.org/projects/feh/'
 license=('MIT')
 depends=('libxinerama' 'giblib' 'perl')
 makedepends=('libxt')
-source=("${url}${pkgname}-${pkgver}.tar.bz2"
-        'keystate.patch')
-sha1sums=('cc4209aa197938389b3d6628e75404eff52475cc'
-          '1a3d7f07cc2a7b508480de0eda9e3014ad599543')
+source=("${url}${pkgname}-${pkgver}.tar.bz2")
+sha1sums=('5c78db9415c2d81c092ddcd3e94059e05e04953a')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  patch -p1 -i ../keystate.patch
   make PREFIX=/usr
 }
 
