upgpkg: strigi git20110107-1 snapshot from git to solve some bugs
git-svn-id: file:///srv/repos/svn-packages/svn@107759 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/strigi/trunk/PKGBUILD
+++ b/strigi/trunk/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Tobias Powalowski <tpowa@archlinux.org>
 
 pkgname=strigi
-pkgver=0.7.2
-pkgrel=3
+pkgver=git20110107
+pkgrel=1
 pkgdesc="Fast crawling desktop search engine with Qt4 GUI"
 arch=('i686' 'x86_64')
 url="http://www.vandenoever.info/software/strigi/"
 license=('GPL2')
 depends=('qt' 'clucene' 'bzip2' 'exiv2' 'libxml2')
 makedepends=('cmake' 'pkgconfig')
-source=("http://www.vandenoever.info/software/${pkgname}/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('ca09ba176cf3ffe9afce4d92f38f9a85')
-options=('!libtool')
+source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('6f648631061c61328ee60c0287ad2e37')
+options=('!libtool' 'force')
 
 build() {
   cd ${srcdir}
